Fix page and svg overflows

--- a/client/development/styles/main.scss
+++ b/client/development/styles/main.scss
@@ -56,7 +56,7 @@ body {
 	align-items: stretch;
 	align-content: space-between;
 	justify-content: center;
-	width: 100vw;
+	width: 100%;
 	min-height: 100vh;
 	font-family: $ffHeading2;
 	font-weight: 700;
@@ -401,6 +401,7 @@ section.maps {
 	overflow: auto;
 
 	svg {
+		max-width: 100%;
 		margin: 0 auto;
 		display: block;
 	}
